添加登录和注册后端逻辑

--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
 			document.getElementById("login").addEventListener('tap',function(){
 				var username=document.getElementById("username").value;
 				var pwd=document.getElementById("pwd").value;
-				mui.post('http:',{
+				mui.post('http://127.0.0.1:80',{
 					username:username,
 					pwd:pwd,
 				},function(data){
